--- a/Puppeteer/package.json
+++ b/Puppeteer/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^13.0.1"
+    "lighthouse": "^9.2.0",
+    "puppeteer": "^13.0.1",
+    "request": "^2.88.2"
   }
 }
